website/websites/gp4/code/chameneos-scala-2.log
BUILD COMMANDS FOR: chameneos.scala-2.scala

Tue Sep 11 13:33:01 PDT 2007

( if [ ! -d chameneos.scala-2.scala_run ] ; then mkdir chameneos.scala-2.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/chameneos/chameneos.scala-2.scala chameneos.scala-2.scala_run/chameneos.scala
( cd chameneos.scala-2.scala_run ; /opt/scala-2.6.0/bin/scalac chameneos.scala )
chameneos.scala:62: error: type mismatch;
 found   : scala.actors.OutputChannel[Any]
 required: scala.actors.Actor
                  waitingChameneo = Some(sender)
                                         ^
one error found
make[3]: [chameneos.scala-2.scala_run] Error 1 (ignored)
touch chameneos.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0.02/bin/java $JDKFLAGS -server -Xbatch" /opt/scala-2.6.0/bin/scala -classpath chameneos.scala-2.scala_run chameneos %A
************************************************************
*   TEST (chameneos.scala-2.scala_run) FAILED - ERROR:  chameneos.scala-2.scala_out differs from Output.50000
************************************************************
-rw-r--r-- 1 dunham users  7 Dec  8  2005 Output.50000
-rw-r--r-- 1 dunham users 24 Sep 11 13:33 chameneos.scala-2.scala_out


PROGRAM OUTPUT
==============
no such file: chameneos
